2012-04-05  Dave Cross <dave@dave.org.uk>

  * lib/XML/Feed.pm: Remove svn tag.

  * lib/XML/Feed.pm: Changed contact details from non-working 6A email address.

2012-03-28  sockmonk <wes.sheldahl@gmail.com>

  * README: Updated README file with current and tested installation
  instructions.  Hoping to clarify the confusion reflected in RT # 53884, maybe
  even resolve it.  https://rt.cpan.org/Public/Bug/Display.html?id=53884

2012-03-12  Dave Cross <dave@dave.org.uk>

  * lib/XML/Feed.pm: Bump version for release.

  * t/07-atom10-create.t: Fixed broken date test.

  * lib/XML/Feed/Entry/Format/Atom.pm: Applying the missing bit of the patch
  from https://rt.cpan.org/Ticket/Display.html?id=20763

2012-03-10  Dave Cross <dave@dave.org.uk>

  * lib/XML/Feed.pm: Bump version number for release.

  * Build.PL: Increase XML::Atom dependency to 0.37 - see
  https://rt.cpan.org/Ticket/Display.html?id=74703

2012-03-06  Gabor Szabo <szabgab@gmail.com>

  * MANIFEST.SKIP: fix MANIFEST.SKIP

  * MANIFEST: update MANIFEST file

  * eg/check_feed.pl: add example

  * lib/XML/Feed.pm, lib/XML/Feed/Entry.pm: add links to the POD

2012-02-19  Gabor Szabo <szabgab@gmail.com>

  * t/23-eval.t: add explicit tests for loading internal packages and failing
  when it does not exist

  * lib/XML/Feed/Entry/Format/Atom.pm, lib/XML/Feed/Entry/Format/RSS.pm,
  lib/XML/Feed/Format/Atom.pm, lib/XML/Feed/Format/RSS.pm: split up files to
  individual packages

  * .gitignore: ignore *.swp files

2012-02-18  Gabor Szabo <szabgab@gmail.com>

  * .gitignore: gitignore some generated files

2012-02-17  Gabor Szabo <szabgab@gmail.com>

  * lib/XML/Feed/Format/RSS.pm: add missing return call fixing the failures
  introduced when trying to fix 73160

  * lib/XML/Feed/Format/RSS.pm: eliminate warning generated in
  t/16-convert-mult-categories.t

2011-12-11  Dave Cross <dave@dave.org.uk>

  * MANIFEST, lib/XML/Feed/Format/RSS.pm, t/22-bug73160.t,